--- a/netlify.toml
+++ b/netlify.toml
@@ -20,3 +20,10 @@
       frame-src *;
       object-src 'none';
     """
+
+[[headers]]
+  for = "/api/*"
+  [headers.values]
+    Access-Control-Allow-Origin = "*"
+    Access-Control-Allow-Headers = "*"
+    Access-Control-Allow-Methods = "GET, POST, OPTIONS"
