--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "eslint-config-next": "^16.0.8",
     "tailwindcss": "^4",
     "typescript": "^5",
-    "vite-tsconfig-paths": "^4.2.1",
-    "vitest": "^4.0.14"
+    "vite-tsconfig-paths": "^4.2.1"
   }
 }
